fix double borders on code highlights

--- a/source/stylesheets/includes/_code.less
+++ b/source/stylesheets/includes/_code.less
@@ -10,7 +10,7 @@
     border-radius: @dimension-border-radius;
 }
 
-.highlight {
+pre.highlight {
     padding: @container-padding;
     border: 2px solid @colour-brand;
     border-radius: @dimension-border-radius;
